Removed CLASSPATH, for consistency with the bat and as decided on tomcat-dev.
Removed the ant stuff.

Update for the new Main.java